objects/Dalmia_Duplicate_Student__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Country__c</fullName>
        <label>Duplicate Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicate_State__c</fullName>
        <label>Duplicate State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TAMILNADU</fullName>
                </value>
                <value>
                    <fullName>KARNATAKA</fullName>
                </value>
                <value>
                    <fullName>NEWJERSEY</fullName>
                </value>
                <value>
                    <fullName>TEXAS</fullName>
                </value>
                <value>
                    <fullName>LONDON</fullName>
                </value>
                <value>
                    <fullName>SUSSEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <label>Student Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Duplicate Student</label>
    <nameField>
        <displayFormat>DS-{0000}</displayFormat>
        <label>Duplicate Student #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Students</pluralLabel>
    <recordTypes>
        <fullName>Duplicate_Dalmia_India</fullName>
        <active>true</active>
        <description>It will show only Dalmia India</description>
        <label>Duplicate Dalmia India</label>
    </recordTypes>
    <recordTypes>
        <fullName>Duplicate_Dalmia_UK</fullName>
        <active>true</active>
        <label>Duplicate Dalmia UK</label>
    </recordTypes>
    <recordTypes>
        <fullName>Duplicate_Dalmia_USA</fullName>
        <active>true</active>
        <label>Duplicate Dalmia USA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>